--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-clean": "^0.4.0",
     "gulp-clean-css": "^4.2.0",
     "gulp-concat": "^2.6.1",
+    "gulp-font-spider": "^0.3.6",
     "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^6.0.0",
     "gulp-notify": "^3.2.0",
